--- a/ansible/inventory/hosts.ini
+++ b/ansible/inventory/hosts.ini
@@ -1,5 +1,5 @@
 [spark_primary]
-192.168.1.61 ansible_user=du
+192.168.1.59 ansible_user=du ansible_host=192.168.1.59 hostname=spark-3712.local
 
 [spark_all:children]
 spark_primary
