--- a/ansible/playbooks/native/01_install_update_comfyui.yml
+++ b/ansible/playbooks/native/01_install_update_comfyui.yml
@@ -158,77 +158,6 @@
         executable: /bin/bash
       ignore_errors: yes
 
-    - name: Check if sageattention is already installed
-      shell: |
-        source {{ venv_path }}/bin/activate
-        python -c "import sageattention; print('INSTALLED')" 2>/dev/null || echo "NOT_INSTALLED"
-      args:
-        executable: /bin/bash
-      register: sageattention_check
-      changed_when: false
-      failed_when: false
-
-    - name: Clone sageattention source (REQUIRED - build from source for sm_121)
-      git:
-        repo: "https://github.com/thu-ml/sageattention.git"
-        dest: "/tmp/sageattention-build"
-        version: "main"
-        force: yes
-      when: "'NOT_INSTALLED' in sageattention_check.stdout"
-
-    - name: Build sageattention from source for GPU architecture {{ cuda_arch_list }} (REQUIRED - NOT OPTIONAL)
-      shell: |
-        set -e
-        source {{ venv_path }}/bin/activate
-        {% for key, value in comfyui_env_vars.items() %}
-        export {{ key }}="{{ value }}"
-        {% endfor %}
-        export CUDA_HOME="{{ cuda_home }}"
-        export TORCH_CUDA_ARCH_LIST="8.0;8.9;9.0;12.0"
-        export PATH="{{ venv_path }}/bin:{{ cuda_home }}/bin:/usr/bin:/bin:/usr/local/bin:$PATH"
-        export CC=/usr/bin/gcc
-        export CXX=/usr/bin/g++
-        export AS=/usr/bin/as
-        
-        echo "========================================"
-        echo "Building sageattention from source for sm_{{ cuda_arch_list | replace('.', '') }}"
-        echo "CUDA_HOME: $CUDA_HOME"
-        echo "TORCH_CUDA_ARCH_LIST: $TORCH_CUDA_ARCH_LIST"
-        echo "Source: /tmp/sageattention-build"
-        echo "========================================"
-        
-        cd /tmp/sageattention-build
-        
-        # Build CUDA kernels explicitly with setup.py
-        echo "Step 1: Building CUDA kernels with setup.py..."
-        MAX_JOBS=4 {{ venv_path }}/bin/python setup.py build_ext --inplace
-        
-        # Create wheel with compiled kernels
-        echo "Step 2: Creating wheel with compiled kernels..."
-        MAX_JOBS=4 {{ venv_path }}/bin/python setup.py bdist_wheel
-        
-        # Install the built wheel
-        echo "Step 3: Installing built wheel..."
-        {{ venv_path }}/bin/pip install dist/*.whl --force-reinstall
-        
-        # Patch for sm_121 support (Blackwell GB10)
-        echo "Step 4: Patching sageattention for sm_121 support..."
-        bash {{ playbook_dir }}/scripts/patch_sageattention_sm121.sh "{{ venv_path }}/lib/python3.12/site-packages/sageattention/core.py"
-        
-        echo "========================================"
-        echo "Verifying sageattention installation"
-        echo "========================================"
-        {{ venv_path }}/bin/python -c "import sageattention; print('✓ sageattention successfully imported from source build!')"
-        echo "✓ sageattention built from source with sm_{{ cuda_arch_list | replace('.', '') }} kernels!"
-      args:
-        executable: /bin/bash
-      when: "'NOT_INSTALLED' in sageattention_check.stdout"
-      register: sageattention_install_result
-
-    - name: Display sageattention status
-      debug:
-        msg: "{{ 'sageattention already installed' if 'NOT_INSTALLED' not in sageattention_check.stdout else sageattention_install_result.stdout_lines }}"
-
     - name: Set venv permissions for multi-user access
       file:
         path: "{{ venv_path }}"
@@ -273,4 +202,8 @@
             cd {{ comfyui_install_dir }}
             ./launch.sh
           
-          Or install as a systemd service (runs as root) with playbook 02_run_as_service.yml
+          Next steps:
+            1. Install as systemd service: 04_run_as_service.yml
+            2. (Optional) Install SageAttention for FLUX/large models: 09_install_sageattention_blackwell.yml
+          
+          Note: SageAttention is recommended for FLUX and large WAN models but not required for basic operation.
